Fix bug for flex-wrap in fieldset achievement

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -412,6 +412,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-start;
+      flex-basis: 100%;
 
       padding-top: 20px;
     }
